// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders the checked style 1`] = `
.c3 {
  width: 2.25rem;
  height: 1rem;
  cursor: pointer;
  background: #C6CDD4;
  display: inline-block;
  border-radius: 0.5rem;
  position: relative;
  margin-right: 0.5rem;
}

.c3::before {
  content: '';
  position: absolute;
  top: -0.125rem;
  left: 0;
  width: 1.25rem;
  height: 1.25rem;
  background: #FFFFFF;
  border-radius: 50%;
  box-shadow: 0 0 0.0625rem 0 rgba(0,0,0,0.05),0 0.0625rem 0.1875rem 0 rgba(0,0,0,0.4);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
}

.c3::after {
  content: '';
  display: block;
  border-radius: 0.5rem;
  width: 1rem;
  height: 1rem;
  background-color: #096BDB;
  -webkit-transition: width 200ms;
  transition: width 200ms;
}

.c1 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c1:checked + .c2::before {
  -webkit-transform: translateX(calc(100% - 0.25rem));
  -ms-transform: translateX(calc(100% - 0.25rem));
  transform: translateX(calc(100% - 0.25rem));
}

.c1:checked + .c2::after {
  width: 2.25rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
  class="c0"
>
  <input
    checked=""
    class="c1"
    type="checkbox"
  />
  <div
    class="c2 c3"
  />
</label>
`;

exports[`Toggle renders the disabled checked style 1`] = `
.c3 {
  width: 2.25rem;
  height: 1rem;
  cursor: not-allowed;
  background: #F1F2F4;
  display: inline-block;
  border-radius: 0.5rem;
  position: relative;
  margin-right: 0.5rem;
}

.c3::before {
  content: '';
  position: absolute;
  top: -0.125rem;
  left: 0;
  width: 1.25rem;
  height: 1.25rem;
  background: #F1F2F4;
  border-radius: 50%;
  box-shadow: 0 0 0.0625rem 0 rgba(0,0,0,0.05),0 0.0625rem 0.1875rem 0 rgba(0,0,0,0.4);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
}

.c3::after {
  content: '';
  display: block;
  border-radius: 0.5rem;
  width: 1rem;
  height: 1rem;
  background-color: #F1F2F4;
  -webkit-transition: width 200ms;
  transition: width 200ms;
}

.c1 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c1:checked + .c2::before {
  -webkit-transform: translateX(calc(100% - 0.25rem));
  -ms-transform: translateX(calc(100% - 0.25rem));
  transform: translateX(calc(100% - 0.25rem));
}

.c1:checked + .c2::after {
  width: 2.25rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
  class="c0"
  disabled=""
>
  <input
    checked=""
    class="c1"
    disabled=""
    type="checkbox"
  />
  <div
    class="c2 c3"
    disabled=""
  />
</label>
`;

exports[`Toggle renders the disabled style 1`] = `
.c3 {
  width: 2.25rem;
  height: 1rem;
  cursor: not-allowed;
  background: #F1F2F4;
  display: inline-block;
  border-radius: 0.5rem;
  position: relative;
  margin-right: 0.5rem;
}

.c3::before {
  content: '';
  position: absolute;
  top: -0.125rem;
  left: 0;
  width: 1.25rem;
  height: 1.25rem;
  background: #F1F2F4;
  border-radius: 50%;
  box-shadow: 0 0 0.0625rem 0 rgba(0,0,0,0.05),0 0.0625rem 0.1875rem 0 rgba(0,0,0,0.4);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
}

.c3::after {
  content: '';
  display: block;
  border-radius: 0.5rem;
  width: 1rem;
  height: 1rem;
  background-color: #F1F2F4;
  -webkit-transition: width 200ms;
  transition: width 200ms;
}

.c1 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c1:checked + .c2::before {
  -webkit-transform: translateX(calc(100% - 0.25rem));
  -ms-transform: translateX(calc(100% - 0.25rem));
  transform: translateX(calc(100% - 0.25rem));
}

.c1:checked + .c2::after {
  width: 2.25rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
  class="c0"
  disabled=""
>
  <input
    class="c1"
    disabled=""
    type="checkbox"
  />
  <div
    class="c2 c3"
    disabled=""
  />
</label>
`;

exports[`Toggle renders the error checked style 1`] = `
.c3 {
  width: 2.25rem;
  height: 1rem;
  cursor: not-allowed;
  background: #F1F2F4;
  display: inline-block;
  border-radius: 0.5rem;
  position: relative;
  margin-right: 0.5rem;
}

.c3::before {
  content: '';
  position: absolute;
  top: -0.125rem;
  left: 0;
  width: 1.25rem;
  height: 1.25rem;
  background: #F1F2F4;
  border-radius: 50%;
  box-shadow: 0 0 0.0625rem 0 rgba(0,0,0,0.05),0 0.0625rem 0.1875rem 0 rgba(0,0,0,0.4);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
}

.c3::after {
  content: '';
  display: block;
  border-radius: 0.5rem;
  width: 1rem;
  height: 1rem;
  background-color: #F1F2F4;
  -webkit-transition: width 200ms;
  transition: width 200ms;
}

.c1 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c1:checked + .c2::before {
  -webkit-transform: translateX(calc(100% - 0.25rem));
  -ms-transform: translateX(calc(100% - 0.25rem));
  transform: translateX(calc(100% - 0.25rem));
}

.c1:checked + .c2::after {
  width: 2.25rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
  class="c0"
  disabled=""
>
  <input
    class="c1"
    disabled=""
    type="checkbox"
  />
  <div
    class="c2 c3"
    disabled=""
  />
</label>
`;

exports[`Toggle renders the error style 1`] = `
.c3 {
  width: 2.25rem;
  height: 1rem;
  cursor: pointer;
  background: #C6CDD4;
  display: inline-block;
  border-radius: 0.5rem;
  position: relative;
  margin-right: 0.5rem;
}

.c3::before {
  content: '';
  position: absolute;
  top: -0.125rem;
  left: 0;
  width: 1.25rem;
  height: 1.25rem;
  background: #FFFFFF;
  border-radius: 50%;
  box-shadow: 0 0 0.0625rem 0 rgba(0,0,0,0.05),0 0.0625rem 0.1875rem 0 rgba(0,0,0,0.4);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
}

.c3::after {
  content: '';
  display: block;
  border-radius: 0.5rem;
  width: 1rem;
  height: 1rem;
  background-color: #FF5E05;
  -webkit-transition: width 200ms;
  transition: width 200ms;
}

.c1 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c1:checked + .c2::before {
  -webkit-transform: translateX(calc(100% - 0.25rem));
  -ms-transform: translateX(calc(100% - 0.25rem));
  transform: translateX(calc(100% - 0.25rem));
}

.c1:checked + .c2::after {
  width: 2.25rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
  class="c0"
>
  <input
    class="c1"
    type="checkbox"
  />
  <div
    class="c2 c3"
  />
</label>
`;

exports[`Toggle renders with default props 1`] = `
.c3 {
  width: 2.25rem;
  height: 1rem;
  cursor: pointer;
  background: #C6CDD4;
  display: inline-block;
  border-radius: 0.5rem;
  position: relative;
  margin-right: 0.5rem;
}

.c3::before {
  content: '';
  position: absolute;
  top: -0.125rem;
  left: 0;
  width: 1.25rem;
  height: 1.25rem;
  background: #FFFFFF;
  border-radius: 50%;
  box-shadow: 0 0 0.0625rem 0 rgba(0,0,0,0.05),0 0.0625rem 0.1875rem 0 rgba(0,0,0,0.4);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
}

.c3::after {
  content: '';
  display: block;
  border-radius: 0.5rem;
  width: 1rem;
  height: 1rem;
  background-color: #096BDB;
  -webkit-transition: width 200ms;
  transition: width 200ms;
}

.c1 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c1:checked + .c2::before {
  -webkit-transform: translateX(calc(100% - 0.25rem));
  -ms-transform: translateX(calc(100% - 0.25rem));
  transform: translateX(calc(100% - 0.25rem));
}

.c1:checked + .c2::after {
  width: 2.25rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
  class="c0"
>
  <input
    class="c1"
    type="checkbox"
  />
  <div
    class="c2 c3"
  />
</label>
`;
